finished design, fixed layout bugs

--- a/code/style.css
+++ b/code/style.css
@@ -33,24 +33,26 @@ p {
 .header-image {
   display: flex;
   margin: 0 0;
-  width:100vw;
-  height: 45vh;
+  width:100%;
+  height: 350px;
+  
 }
 
 /* styling header */
 
 header {
   background: linear-gradient(to left, #999999, #c5c5c5);
-  width: 100vw;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  
 }
 
 .site-name {
   display: flex;
   align-items: center;
-}
+ }
 
 .img-logo {
   padding: 1vw;
@@ -59,7 +61,7 @@ header {
 
 .desktop-menu-navbar {
   display: flex;
-  width: 700px;
+  width: 600px;
   height: 100px;
   justify-content: space-evenly;
   color: rgb(51, 51, 51);
@@ -84,7 +86,7 @@ header {
 
 .big-news {
   background-color: rgba(255, 255, 255, 0.39);
-  margin: 80px 150px;
+  margin: 80px 100px;
   display: flex;
   justify-content: space-between;
 }
@@ -106,7 +108,7 @@ header {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 50px;
+  margin: 40px;
   
 }
 
@@ -120,9 +122,8 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 20px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin: 10px 20px; 
+  
 }
 
 /*styling footer*/
@@ -132,14 +133,14 @@ footer {
   justify-content: flex-end;
   margin-top: 20px;
   height: 80px;
-  width: 100vw;
+  width: 100%;
   background-color: #999999;
 }
 
 .link-footer {
   text-decoration: none;
-  display: inline-flex;
-  justify-items: flex-end;
+  /* display: inline-flex; */
+  /* justify-items: flex-end; */
 }
   
 .link-footer img {
@@ -240,12 +241,12 @@ footer {
   header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 
   .link-desktop-navbar {
     width: 100px;
-    margin-left: 35px;
+    margin-left: 25px;
     font-size: 15px;
     align-self: center;
   }
